# Chat-OCaml

./: .gitignore  Makefile  README.md  README.txt  chat.ml  chat_one_on_one.opam  dune  dune-project  file2.txt  generated.ml  main.ml  old_README.txt  server  server.cmi  server.cmo  server.ml
_build/: .db  .digest-db  log
_build/default/: README.txt  chat_one_on_one.dune-package  chat_one_on_one.install  chat_one_on_one.opam  server.ml  server.pp.ml
_build/default/.dune/: configurator  configurator.v2
_build/default/.generated.eobjs/byte/: dune__exe__Generated.cmi  dune__exe__Generated.cmti
_build/default/.generated.eobjs/native/: dune__exe__Generated.cmx
_build/default/.merlin-conf/: exe-generated  exe-server
_build/default/.ppx/bcab0be011c28261c514e69f4fe141f8/: dune__exe___ppx.cmi  dune__exe___ppx.cmo  dune__exe___ppx.cmx
_build/default/.server.eobjs/byte/: dune__exe__Server.cmi  dune__exe__Server.cmti
_build/default/.server.eobjs/native/: dune__exe__Server.cmx
_build/default/.utop/: utop.ml-gen
_build/default/.utop/.utop.eobjs/byte/: dune__exe__Utop.cmo  dune__exe__Utop.cmt
_build/default/lib/: chatLib.cma  chatLib.cmxa  chatLib.cmxs  chatLib.ml-gen
_build/default/lib/.chatLib.objs/: chatLib__Message.impl.d
_build/default/lib/.chatLib.objs/byte/: chatLib.cmi  chatLib.cmo  chatLib.cmt  chatLib__Message.cmi  chatLib__Message.cmo  (+1 more)
_build/default/lib/.merlin-conf/: lib-chatLib
_build/default/test/.merlin-conf/: exe-test_chat_one_on_one
lib/: client.ml  dune  message.ml  promises.ml  receiver.ml  sender.ml  server.ml  utils.ml
test/: dune
(+9 files in other folders)
